--- a/src/main/webapp/app/components/account/groups/GroupView.html
+++ b/src/main/webapp/app/components/account/groups/GroupView.html
@@ -1,78 +1,162 @@
-<form class="form-horizontal row-fluid">
-    <h2>
-        Group
-    </h2>
+<div ng-controller="GroupController" ng-init="getGroups()">
+    <form class="form-horizontal row-fluid">
+        <h2 translate="tatami.menu.groups"></h2>
 
-    <button class="show btn btn-xlarge btn-block btn-primary" type="button">
-        Create a new group
-    </button>
+        <button class="show btn btn-xlarge btn-block btn-primary" type="button" translate="tatami.group.add" ng-click="newGroup()"></button>
 
-    <fieldset class="hide" style="display: block;">
-        <legend>
+        <fieldset class="hide" style="display: block;" ng-show="current.createGroup">
+            <legend translate="tatami.group.add"></legend>
+            <div class="control-group">
+                <label class="control-label" for="name" translate="tatami.group.title"></label>
 
-            Create a new group
-
-        </legend>
-        <div class="control-group">
-            <label class="control-label" for="name">
-                Name of the group
-            </label>
-
-            <div class="controls">
-                <input name="name" type="text" required="required" size="30" maxlength="50" class="input-xlarge col-span-12" value="">
+                <div class="controls">
+                    <input name="name" type="text" required="required" size="30" maxlength="50" class="input-xlarge col-span-12" value="" ng-model="groups.name">
+                </div>
             </div>
-        </div>
 
-        <div class="control-group">
-            <label class="control-label" for="description">
-                Description
-            </label>
+            <div class="control-group">
+                <label class="control-label" for="description" translate="tatami.group.description"></label>
 
-            <div class="controls">
-                <textarea name="description" class="input-xlarge col-span-12"></textarea>
+                <div class="controls">
+                    <textarea name="description" class="input-xlarge col-span-12" ng-model="groups.description"></textarea>
+                </div>
             </div>
-        </div>
 
 
-        <div class="control-group">
-            <label class="control-label" for="publicGroup">
-                Access
-            </label>
+            <div class="control-group">
+                <label class="control-label" for="publicGroup" translate="tatami.group.access"></label>
 
-            <div class="controls">
-                <label class="radio">
-                    <input type="radio" name="publicGroup" value="public" checked="" required="">
-                    Public
-                </label>
-                <label class="radio">
-                    <input type="radio" name="publicGroup" value="private" required="">
-                    Private
-                </label>
+                <div class="controls">
+                    <label class="radio">
+                        <input type="radio" name="publicGroup" value="true" ng-checked="true" required="" ng-model="groups.publicGroup"> {{ 'tatami.group.public' | translate }}
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="publicGroup" value="false" required="" ng-model="groups.publicGroup"> {{ 'tatami.group.private' | translate }}
+                    </label>
+                </div>
             </div>
+
+            <div class="alertColor">
+                <i class="glyphicon glyphicon-warning-sign"></i> {{ 'tatami.group.warnPublic' | translate }}
+            </div>
+
+
+            <br>
+            <div class="return"></div>
+            <br>
+            <div class="form-actions">
+
+                <button type="submit" class="btn btn-success col-span-7 little-marge-right" translate="tatami.form.save" ng-click="createNewGroup()"></button>
+                <button type="reset" class="btn btn-danger col-span-4" translate="tatami.form.cancel" ng-click="cancelGroupCreate()"></button>
+
+            </div>
+
+        </fieldset>
+
+        <div>
+            <table class="table noCollapse">
+                <tbody><tr>
+                    <th style="border-top :0" translate="tatami.group.name"></th>
+                    <th style="border-top :0" translate="tatami.group.access"></th>
+                    <th style="border-top :0" translate="tatami.group.counter"></th>
+                    <th style="border-top :0"></th>
+                </tr>
+                </tbody><tbody class="items">
+            <div ng-repeat="group in userGroups">
+                <tr>
+                    <td>
+                        <a href="/tatami/home/groups/{{ group.groupId }}">{{ group.name }}</a>
+                    </td>
+                    <td>
+                        <span class="label labelSizeNormal label-warning">Public</span>
+                    </td>
+                </tr>
+            <tr>
+                <!-- Afin que les groupes privÃ©s dont le nom est cachÃ© n apparaissent pas -->
+                <td>
+                    <a href="/tatami/home/groups/9a24a370-5c7c-11e4-b72f-fe54008898dc" title="">Test Group</a>
+                </td>
+                <td>
+
+                    <span class="label labelSizeNormal label-warning">Public</span>
+
+                </td>
+                <td>
+                    1
+                </td>
+                <td>
+
+                    <a href="/tatami/account/#/groups/9a24a370-5c7c-11e4-b72f-fe54008898dc" class="btn-title toggleTag pull-right label labelSizeNormal label-info hidden-phone">
+                        <span class="glyphicon glyphicon-th-large"> <span>Manage</span></span>
+                    </a>
+
+                </td>
+
+            </tr><tr>
+                <!-- Afin que les groupes privÃ©s dont le nom est cachÃ© n apparaissent pas -->
+                <td>
+                    <a href="/tatami/home/groups/f679bd40-4a75-11e4-b72f-fe54008898dc" title="Used to update the status publish windows">Test group</a>
+                </td>
+                <td>
+
+                    <span class="label labelSizeNormal label-warning">Public</span>
+
+                </td>
+                <td>
+                    2
+                </td>
+                <td>
+
+                    <a href="/tatami/account/#/groups/f679bd40-4a75-11e4-b72f-fe54008898dc" class="btn-title toggleTag pull-right label labelSizeNormal label-info hidden-phone">
+                        <span class="glyphicon glyphicon-th-large"> <span>Manage</span></span>
+                    </a>
+
+                </td>
+
+            </tr><tr>
+                <!-- Afin que les groupes privÃ©s dont le nom est cachÃ© n apparaissent pas -->
+                <td>
+                    <a href="/tatami/home/groups/b2a0cc50-5c02-11e4-b72f-fe54008898dc" title="">blah</a>
+                </td>
+                <td>
+
+                    <span class="label labelSizeNormal label-warning">Public</span>
+
+                </td>
+                <td>
+                    1
+                </td>
+                <td>
+
+                    <a href="/tatami/account/#/groups/b2a0cc50-5c02-11e4-b72f-fe54008898dc" class="btn-title toggleTag pull-right label labelSizeNormal label-info hidden-phone">
+                        <span class="glyphicon glyphicon-th-large"> <span>Manage</span></span>
+                    </a>
+
+                </td>
+
+            </tr><tr>
+                <!-- Afin que les groupes privÃ©s dont le nom est cachÃ© n apparaissent pas -->
+                <td>
+                    <a href="/tatami/home/groups/ddb9c6a0-5ca0-11e4-b72f-fe54008898dc" title="">figure out post data</a>
+                </td>
+                <td>
+
+                    <span class="label labelSizeNormal label-warning">Public</span>
+
+                </td>
+                <td>
+                    1
+                </td>
+                <td>
+
+                    <a href="/tatami/account/#/groups/ddb9c6a0-5ca0-11e4-b72f-fe54008898dc" class="btn-title toggleTag pull-right label labelSizeNormal label-info hidden-phone">
+                        <span class="glyphicon glyphicon-th-large"> <span>Manage</span></span>
+                    </a>
+
+                </td>
+
+            </tr></tbody>
+            </table>
         </div>
-
-        <div class="alertColor">
-            <i class="glyphicon glyphicon-warning-sign"></i>
-            Warning! If this group is public, everybody can access it
-        </div>
-
-
-        <br>
-        <div class="return"></div>
-        <br>
-        <div class="form-actions">
-
-            <button type="submit" class="btn btn-success col-span-7 little-marge-right">
-                Save
-            </button>
-            <button type="reset" class="btn btn-danger col-span-4">
-                Cancel
-            </button>
-
-        </div>
-
-    </fieldset>
-
-
-
-</form>
+    </form>
+</div>
